# checksitemap

./: .coveragerc  .editorconfig  .gitignore  Makefile  Pipfile  README.md  checksitemap  checksitemap.py  pyproject.toml  setup.py  tests.py
.github/: dependabot.yml
.github/workflows/: black.yml  release.yml  tests.yml
checksitemap/: __init__.py  __main__.py  exception.py  fetcher.py  sitemap.py  utils.py
test_assets/: invalid_sitemap_changefreq.xml  invalid_sitemap_invalid_priority.xml  invalid_sitemap_invalid_tag.xml  invalid_sitemap_missing_loc.xml  invalid_sitemap_missing_namespace.xml  sitemap_with_404.xml  valid_sitemap.xml
