[tool.poetry]
name = "checksitemap"
version = "1.1.0"
description = "A tool to validate your sitemaps"
authors = ["Jérôme Deuchnord"]
repository = "https://github.com/Deuchnord/checksitemap"
license = "AGPL-3.0-or-later"
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]

[tool.poetry.scripts]
checksitemap = "checksitemap.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31"
beautifulsoup4 = "^4.12"

[tool.poetry.dev-dependencies]
black = "^23.3"
aurornis = "^1.5"
pytest = "^7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
